@@ -23,6 +23,8 @@ CLEANFILES += $(OUTPUTFILES) *.x
 
 .PHONY: doc test updateWeb install
 
+programs: softpoint.x rpvsoftsusy.x softsusy.x softsusy-nmssm.x rpvneut.x
+
 updateWeb: dist 
 	scp softsusy-${VERSION}.tar.gz allanach@login.hepforge.org:~/softsusy/downloads; 
 	scp inOutFiles/*{Input,Output}* allanach@login.hepforge.org:~/softsusy/public_html/code
